--- a/views/detailpagina.ejs
+++ b/views/detailpagina.ejs
@@ -19,7 +19,7 @@
 
         <!-- <button class="terug"> <img src="" alt="#"> </button> -->
 
-            <h2>Trainer profiel</h2>
+            <h2>Trainer profile</h2>
 
         <div class="profielContainer">
             <div class="profielBox">
@@ -33,23 +33,29 @@
                 <h3>Skills</h3>
                 <ul class="skills">
                     <li>Calisthenics</li>
-                    <li>Weights</li>
-                    <li>Rehabilitatie</li>
                 </ul>
             </div>
      
 
             <div class="overMij">
-                <h3>Over Mij</h3>
+                <h3>About Me</h3>
                 <p>Hallo! Mijn naam is Angela, en ik ben een gecertificeerde personal trainer met meer dan 10 jaar
                     ervaring in de fitnessindustrie. Mijn passie is om mensen te helpen hun gezondheids- en
                     fitnessdoelen te bereiken door middel van op maat gemaakte trainingsprogramma's en deskundige
                     begeleiding.</p>
                 </div>
+
+                <div class="contactGegevens">
+                    <h3>Contact</h3>
+                    <a href="">Email</a>
+                    <a href="">Phone</a>
+                    <a href="">Whatsapp</a>
+                   
+                </div>
     
 
 
-        <div class="containerForm">
+        <!-- <div class="containerForm">
             <div class="left">
                 <h3 class="heading">Get in touch</h3>
                 <p class="text">We are here for you! How can we help?</p>
@@ -69,7 +75,7 @@
                     <button class="btn">Submit</button>
 
                 </form>
-            </div>
+            </div> -->
 
             <!-- <div class="right">
                 <div class="illustration">
