--- a/public/stylesheets/detailpagina.css
+++ b/public/stylesheets/detailpagina.css
@@ -23,11 +23,12 @@ h2 {
 h3{
     margin-bottom: 0.3em;
     font-size: 1.3em;
+    text-transform: uppercase;
 }
 
 
 .profielContainer{
-    background-color: rgb(34, 33, 33);
+    background-color: var(--main-tint);
     padding: 2em;
     border-radius: 0.2em;
 }
@@ -54,7 +55,7 @@ h3{
 
 .skills li{
  margin-right: 0.8em;
- background-color: rgb(69, 69, 69);
+ background-color: var(--accent-kleur2);
  padding: 0.5em;
  border-radius: 2em;
 }
@@ -72,7 +73,7 @@ h3{
     display: flex;
     gap: 80px;
     border-radius: 6px;
-    background-color: rgb(39, 39, 39);
+    background-color: var(--accent-kleur2);
     margin-top: 3em;
     box-shadow: 0 0 10px  rgba(0, 0, 0, 0.1);
     justify-content: center;
@@ -87,7 +88,7 @@ h3{
     font-size: 20px;
     font-weight: 600;
     line-height: 1;
-    color: rgb(230, 244, 39);
+    color: var(--accent-kleur);
 }
 
 .text {
