--- a/public/stylesheets/loginsignup.css
+++ b/public/stylesheets/loginsignup.css
@@ -105,13 +105,20 @@ button:hover {
 }
 
 .logout {
-    background-color: rgb(255, 132, 132);
-    color: red;
-    width: 100%;
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: 3  00;
-    border-radius: 5px;
+    background-color: #fd0000; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-top: 10px;
     cursor: pointer;
-    transition: 0.5s ease-in-out;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.profielFoto {
+    border-radius: 10px;
 }
