--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,9 @@
     <title>Login</title>
 </head>
 <body>
+  <header>
+    <%-include ('nav.ejs')%> 
+  </header>
     <div class="login-container">
         
         <% if (loginError) { %>
