--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,7 +10,10 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <h1>Sign Up</h1>
+    <header>
+        <%-include ('nav.ejs')%> 
+    </header>
+    <div id="containerregister">
     <form action="/register" method="POST" enctype="multipart/form-data">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
@@ -33,5 +36,6 @@
         <button type="submit">Sign Up</button>
         <p class="noAccount">Already have a account? Sign in <a href="/login">here</a></p>
     </form>
+    </div>
 </body>
 </html>
