--- a/public/stylesheets/loginsignup.css
+++ b/public/stylesheets/loginsignup.css
@@ -1,18 +1,31 @@
+#formcontainer{
+    height: 100vh;
+    width: 80vw;
+    margin: 5% 0;
+}
 form {
-    height: auto;
-    width: 400px;
-    background-color: rgba(255,255,255,0.13);
+    z-index: 10;
     position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
+    height: fit-content;
+    width: 40%;
+    background-color: rgba(255,255,255,0.13);
     left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    padding: 10px;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 0 0 40px rgba(8,7,16,0.6);
-    padding: 50px 35px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
+
+@media only screen and (max-width: 600px) {
+    form {
+        width: 80vw;
+    }
+  }
 
 form *{
     font-family: 'Poppins',sans-serif;
