--- a/public/stylesheets/detailpagina.css
+++ b/public/stylesheets/detailpagina.css
@@ -1,239 +1,120 @@
-*{
-    box-sizing: border-box;
-}
-
-body {
-    align-items: center;
-    justify-content: center;
-}
 
 main{
-
-    margin: 6em 1em 2em 2em;
-    border-radius: 0.2em;
-}
-
-h2 {
-    text-transform: uppercase;
-    font-size: 2.5em;
-    color:  var(--tekst);
-    margin-bottom: 0.2em;
+  margin: 5em 2em 5em 2em; 
 }
 
 h3{
-    margin-bottom: 0.3em;
-    font-size: 1.3em;
     text-transform: uppercase;
 }
 
-
-.profielContainer{
-    background-color: var(--main-tint);
-    padding: 2em;
-    border-radius: 0.2em;
+main h2 {
+    font-size: 6vw;
+    color: var(--tekst);
+    text-transform: uppercase;
+    border-bottom: 4px solid var(--tekst);
 }
 
-.profielBox {
+.leeftijd, .geslacht {
+font-family:  monument extended, sans-serif;
+text-transform: uppercase;
+}
+
+.profileFotoContainer {
     margin-top: 1em;
-    background: rgb(35, 34, 34);
-    border-radius: 0.2em;
     width: 100%;
-    height: 25em;
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
+    background-color: var(--tekst);
+    margin-bottom: 1em;
+    padding: 1em;
+    align-items: center;
+    border-radius: 0.3em;
 }
 
 
-.skillList {
-    margin-top: 2em;
+
+.profileFotoContainer img {
+    max-width: 100%;
+    max-height: 100%;
+
 }
 
-.skills {
+.containerProfiel {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+    border-bottom: 4px solid var(--tekst) ;
+}
+
+
+/* Naam en locatie */
+
+.algemeneInformatie .naam{
+    margin-top: 1em;
+    text-transform: uppercase;
+    font-size: 4vw;
+}
+
+
+.algemeneInformatie .naamLocatie .locatie {
+    font-size: 3vw;
+    color: var(--accent-kleur2);
+    margin-top: 0.2em;
+}
+
+.algemeneInformatie .naamLocatie .locatie img{
+  width: 3%;
+  height: 10%;
+  filter: invert(50%);
+}
+
+/* Expertise */
+.expertiseContainer {
+    margin-top: 1em;
+    padding-bottom: 1em;
+}
+
+.expertiseContainer h3{
+    font-size: 3vw;
+    text-transform: uppercase;
+}
+
+.expertiseContainer  .pills{
+    margin-top: 0.4em;
     display: flex;
 }
 
-
-.skills li{
- margin-right: 0.8em;
- background-color: var(--accent-kleur2);
- padding: 0.5em;
- border-radius: 2em;
-}
-
-.overMij{
-    margin-top: 3em;
-}
-
-/* Styling form */
-.containerForm {
-    position: relative;
-    display: flex;
-    width: 100%;
-    padding: 40px;
-    display: flex;
-    gap: 80px;
-    border-radius: 6px;
-    background-color: var(--accent-kleur2);
-    margin-top: 3em;
-    box-shadow: 0 0 10px  rgba(0, 0, 0, 0.1);
-    justify-content: center;
-    flex-direction: column; /* Om ze */
-}
-
-.left{
-    width: 55%;
-}
-
-.heading {
-    font-size: 20px;
-    font-weight: 600;
-    line-height: 1;
-    color: var(--accent-kleur);
-}
-
-.text {
-    font-size: 14px;
-    margin-top: 0.5em;
-}
-
-form{
-    color: black;
-    margin-top: 20px;
-}
-
-.inputBox {
-    position: relative;
-    margin-bottom: 20px;
-}
-
-.inputBox input,
-.inputBox textarea {
-   width: 100%;
-   padding: 10px;
-   font-size: 16px;
-   border-radius: 5px;
-   color: rgb(48, 48, 48);
-   border: none;
-   outline: none;
-   background-color: rgb(30, 30, 30);
-}
-.inputBox input::placeholder,
-.inputBox textarea::placeholder {
-    opacity: 0.5;
-    font-size: 12px;
-}
-
-.inputBox.error input,
-.inputBox.error textarea {
-    border-bottom: 1px solid red;
-}
-
-
-.inputBox textarea {
- resize: none; /* Zorgt ervoor dat mensen de tekst box niet kunnen resizen*/
-
-    height: 150px;
-}
-
-.btn{
-    width: 100%;
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
+.expertiseContainer  .pills li{
+    font-size: 2vw;
+    padding: 0.5em 1em;
+    margin: 0 1em 0 0;
+    border-radius: 1em;
     border: none;
-    border-radius: 5px;
-    transition: 0.5s;
+    outline: none;
+    background-color: white;
+    color: black;
 }
 
-.btn:hover {
-    background-color: darkgray;
+/* Contact info */
+
+
+
+.contactInfoContainer {
+    margin-top: 1em;
 }
+.contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
-
-/* Styling rechterkant van de form */
-
-.right {
-    width: 45%;
-}
-
-.illustration {
-    display: flex;
-    width: 100%;
-    margin: 0 auto;
-}
-
-.illustration img {
-   width: 70%;
-   margin: auto;
-   margin-top: 30px;
-}
-
-.contact-info {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 10px;
-}
-
-.infoBox{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.info-box .icon {
-    width: 20px;
-    height: 20px;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 1px solid black;
-}
-
-.info-box .text {
- margin: 0;
-}
-
-.info-box .text a {
-    color: rgb(0, 0, 0);
+    margin-bottom: 1em;
 }
 
 
 
-/* Social icons */
-
-/* .social-icons {
-    position: absolute;
-    background-color: red;
-    color: red;
-    right: -10px;
-    bottom: 50px;
-    border: 10px solid red;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 10px;
-    font-size: 25px;
-    align-items: center;
-} */
 
 
-/* Scherm op mobile */
-@media (max-width: 768px) {
-    .containerForm{
-        flex-direction: column;
-        gap: 40px;
-        padding: 20px;
-    }
+.contactInfo {
+    margin-top: 0.3em;
+}
 
-    .left, .right{
-        width: 100%;
-    }
-
-    .contact-info {
-        margin-top: 40px;
-    }
-    
+.rechts {
+    display: grid;
 }
