--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,6 +4,7 @@
     --tekst: white;
     --accent-kleur: #f2bf33;
     --main-tint: #282828;
+    --main-tint2: #3a3a3a;
     --accent-kleur2: #4D4D4D;
     --accent-kleur3: #666666;
     color-scheme: dark; /*  Donkere scroll bar*/
