--- a/public/stylesheets/overzicht.css
+++ b/public/stylesheets/overzicht.css
@@ -85,9 +85,11 @@
     
     .kaarten {
 
-        /* padding: 1.5em 3em 7em 3em; */
-         margin: 0em 0em 0em 0em; 
+        padding: 1em 1em 7em 1em;
+         margin: 1em 0em 0em 0em; 
         border-radius: 0.4em;
+        background-color: rgba(27, 26, 26, 0.539);
+
         
     }
 
@@ -99,6 +101,7 @@
         margin: 3rem 5vw;
         margin-bottom: 5em;
         filter: opacity(50%);
+       
     }
 
     .kaart {
