--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepagina</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="/stylesheets/styles.css" />
+    <link rel="stylesheet" href="/stylesheets/index.css">
     <link rel="stylesheet" href="/stylesheets/banner.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="/stylesheets/navbar.css" />
+    <link rel="stylesheet" href="/fit-buddy/public/stylesheets/ourstory.css">
+    <link rel="stylesheet" href="/stylesheets/kaart.css">
+    <link rel="stylesheet" href="/stylesheets/collaps.css" />
+    <link rel="stylesheet" href="/stylesheets/footer.css">
+    <link rel="stylesheet" href="/stylesheets/workoutslider.css" />
+</head>
+<body>
+    <header>
+    <%- include('nav.ejs') %>
 
-<header>
-  <%-include ('nav.ejs')%> 
 </header>
-  
+<main>
+    <%- include('banner.ejs') %>
+    <%- include('ourstory.ejs') %>
+    <%- include('workoutslider.ejs') %>
 
-    <Main>
-     
-    <%-include ('banner.ejs')%> 
 
-    <%-include ('waaromons.ejs')%> 
+    <%- include('collaps.ejs') %>
 
-    <%-include ('onzetrainers.ejs')%> 
-
-    <%-include ('kaart.ejs')%> 
-    
-   
-
-    </Main>
-
-    <%-include ('footer.ejs')%> 
-    
-  </body>
-  <script src="/fit-buddy/public/stylesheets/js/index.js"></script>
+ <footer>
+    <%- include('footerraha.ejs') %>
+</footer>
+</main>
+</body>
 </html>
